--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.0.0",
+    "mongodb": "^6.8.1",
     "mongoose": "^8.6.1"
   }
 }
