--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.1",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "react-input-mask": "^2.0.4",
+    "react-phone-input-2": "^2.15.1"
   }
 }
